# gearbox

./: .hgignore  AUTHORS  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: django.yml  run_tests.yml
gearbox/: command.py  commandmanager.py  main.py  template.py
gearbox/commands/: help.py  patch.py  scaffold.py  serve.py  setup_app.py
gearbox/commands/basic_package/: __init__.py  command.py
gearbox/commands/basic_package/template/: README.rst_tmpl  pyproject.toml_tmpl  setup.cfg_tmpl  setup.py_tmpl
gearbox/utils/: copydir.py  log.py  plugins.py
tests/: test_commands.py
